--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Calculadora">
         <activity
+            android:name=".MultiplicarActivity"
+            android:exported="true" />
+        <activity
+            android:name=".RestarActivity"
+            android:exported="true" />
+        <activity
             android:name=".SumarActivity"
             android:exported="true" />
         <activity
