Falta el Toast, preguntar a Luis

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Calculadora">
         <activity
+            android:name=".DividirActivity"
+            android:exported="true" />
+        <activity
             android:name=".MultiplicarActivity"
             android:exported="true" />
         <activity
